--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Développeur Full Stack passionné, expert Laravel et React. Je transforme vos idées en solutions digitales performantes et scalables." />
     <meta name="author" content="Nizar Benakkadou" />
     <meta name="keywords" content="développeur full stack, Laravel, React, PHP, TypeScript, portfolio, Nizar Benakkadou" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="canonical" href="https://nizar-benakkadou.dev" />
 
     <meta property="og:title" content="Nizar Benakkadou | Architecte Full Stack" />
